--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,20 @@ body {
 }
 
 /* ---- Navbar ---- */
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav .logo-container {
+  display: flex;
+  width: 170px;
+  margin: 15px;
+}
+
+nav .logo {
+  width: 25px;
+  margin-right: 5px;
+}
