--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap');
 
-html {
+html, body {
   margin: 0;
   padding: 0;
 }
@@ -13,14 +13,14 @@ html {
   color: #fff;
   text-transform: uppercase;
   font-size: 15px;
-  background: linear-gradient(45deg, #fe3072, #ff5948) ;
+  background: linear-gradient(45deg, rgb(254, 48, 114), rgb(255, 89, 64)) ;
   padding: 12px 30px;
   border-radius: 30px;
   border: none;
 }
 
 .primary-button:hover {
-  background: linear-gradient(260deg, #fe3072, #ff5948) ;
+  background: linear-gradient(260deg, rgb(254, 48, 114), rgb(255, 89, 64)) ;
 }
 
 body {
@@ -45,3 +45,15 @@ nav .logo {
   width: 25px;
   margin-right: 5px;
 }
+
+nav .nav-button {
+  color: rgb(254, 48, 114);
+  background-color: rgb(255, 255, 255);
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  margin: 10px;
+}
+
+/* ---- Home ---- */
