--- a/src/index.css
+++ b/src/index.css
@@ -56,4 +56,28 @@ nav .nav-button {
   margin: 10px;
 }
 
+nav .nav-button:disabled {
+  background-color: rgb(189, 180, 180);
+  color: rgb(193, 42, 90);
+}
+
 /* ---- Home ---- */
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
+}
+
+/* ---- Auth modal ---- */
+.auth-modal {
+  /* position: absolute; */
+  top: 175px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 360px;
+  height: 600px;
+  background-color: rgb(255,255,255);
+  border-radius: 10px;
+  padding: 40px;
+}
