--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ html, body {
   font-family: 'Readex Pro', sans-serif;
 }
 
+h2{
+  font-style: italic;
+}
+
 .primary-button {
   color: #fff;
   text-transform: uppercase;
@@ -17,10 +21,29 @@ html, body {
   padding: 12px 30px;
   border-radius: 30px;
   border: none;
+  cursor: pointer;
 }
 
 .primary-button:hover {
   background: linear-gradient(260deg, rgb(254, 48, 114), rgb(255, 89, 64)) ;
+}
+
+.secondary-button {
+  color: rgb(121,119,119);
+  background-color: rgb(255, 255, 255);
+  font-weight: 500;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 12px 30px;
+  border-radius: 30px;
+  border: solid 2px rgb(121,119,119);
+  margin: 6px;
+  cursor: pointer;
+}
+
+.secondary-button:hover {
+  color: rgb(48,48,48);
+  border: solid 2px rgb(48,48,48);
 }
 
 body {
@@ -54,6 +77,7 @@ nav .nav-button {
   border-radius: 10px;
   border: none;
   margin: 10px;
+  cursor: pointer;
 }
 
 nav .nav-button:disabled {
@@ -80,4 +104,21 @@ nav .nav-button:disabled {
   background-color: rgb(255,255,255);
   border-radius: 10px;
   padding: 40px;
+}
+
+.auth-modal .close-icon {
+  float: right;
+  cursor: pointer;
+}
+
+.auth-modal form {
+  display: flex;
+  flex-direction: column;
+}
+
+.auth-modal input[type=password], 
+.auth-modal input[type=email] {
+  padding: 8px;
+  margin: 8px;
+  font-size: 17px;
 }
