--- a/src/index.css
+++ b/src/index.css
@@ -274,4 +274,55 @@ nav .nav-button:disabled {
 
 /* ---- ChatContainer ---- */
 
+.chat-container {
+  background-color: rgb(255,255,255);
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, 
+  rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  width: 30%;
+  text-align: left;
+  z-index: 1;
+}
 
+.chat-container .chat-container-header {
+  background: linear-gradient(45deg, rgb(228, 1, 119), rgb(88, 0, 183));
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.chat-container .option {
+  border: none;
+  background-color: rgb(255,255,255);
+  border-bottom: solid 4px rgb(88, 0, 183);
+  font-size: 20px;
+  margin: 2px;
+  padding: 10px;
+}
+
+.chat-container .option:disabled {
+  border-bottom: solid 4px rgb(144,144,144);
+}
+
+.chat-container .profile,
+.chat-container .log-out-icon {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  color: rgb(255, 255, 255);
+}
+
+.img-container {
+  height: 30px;
+  width: 30px;
+  border-radius: 15px;
+  overflow: hidden;
+  margin: 10p x;
+}
+
+.img-container img {
+  width: 100%;
+}
+
+/* ---- Chat Display ---- */
