--- a/src/index.css
+++ b/src/index.css
@@ -326,3 +326,16 @@ nav .nav-button:disabled {
 }
 
 /* ---- Chat Display ---- */
+.chat-display {
+  padding: 20px;
+  height: 60vh;
+  overflow-y: auto;
+}
+
+/* ---- Chat Input ---- */
+
+.chat-input{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
